# fermi-dash

./: .gitignore  README.md  main.py  pyproject.toml
debug/: debug_find_files.py  test_dark_export.py
src/fermi_dash/: builder.py  cli.py
