[project]
name = "fermi-dash"
version = "0.1.0"
description = "Static HTML dashboard for Fermi-LAT SED/lightcurve plots (Panel export)."
authors = [ { name = "Your Name" } ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"panel>=1.4",
"pyyaml>=6.0",
"typer>=0.12",
"rich>=13.0"
]

[project.scripts]
fermi-dash = "fermi_dash.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"